feat(api-landingPage) : Création de la page d'accueil

--- a/front/organizer-front/src/app/landing-page/landing-page.component.html
+++ b/front/organizer-front/src/app/landing-page/landing-page.component.html
@@ -1,2 +1,28 @@
+<div class="content">
 
-<a>ezoknezrlekj</a>
+	<div class="button-bar">
+		<div class="button" (click)="toContactsPage()">
+			<span>Contacts</span>
+		</div>
+		<div class="button" routerLink="files">
+			<span>Fichiers</span>
+		</div>
+	</div>
+
+	<div class="search">
+		<div class="search-bar">
+			<input type="text" placeholder="Search..">
+			<span><i class="fa-solid fa-magnifying-glass"></i></span>
+		</div>
+		
+	</div>
+
+	<div class="text-box">
+		<h2 class="title">INTERCONTACT</h2>
+		<span>Application de gestion de la période d'intercontrat</span>
+	</div>
+
+
+
+
+</div>
