feat(front-header) : Modificatoin du header

--- a/front/organizer-front/src/app/header/header.component.html
+++ b/front/organizer-front/src/app/header/header.component.html
@@ -1,12 +1,12 @@
 <header id="header" class="sticky">
-    <div class="title" >
+    <div class="title" routerLink="">
         <h2>INTERCONTACT</h2>
     </div>
     <div class="selector-bar">
-        <div class="selector-button">
+        <div class="selector-button" routerLink="contacts">
             <h2>Contacts</h2>
         </div>
-        <div class="selector-button">
+        <div class="selector-button" routerLink="files">
             <h2>Fichiers</h2>
         </div>
         <div class="search-bar">
@@ -14,6 +14,6 @@
         </div>
     </div>
     <div class ="parameter-button">
-        <span><i class="fa-solid fa-gear"></i>aaa</span>
+        <span><i class="fa fa-gear"></i></span>
     </div>
 </header>
