feat(front-Contact) : Création de neouveau contact + liste des contact + modification du service + ajout du lien vers le back en C#

--- a/front/organizer-front/src/app/contacts/contacts-list/contacts-list.component.html
+++ b/front/organizer-front/src/app/contacts/contacts-list/contacts-list.component.html
@@ -1,4 +1,10 @@
 <div class="content">
+    <div class="button-bar">
+        <div class="add-button right" (click)="toAddContact()">
+            <i class="fa-solid fa-plus"></i>
+        </div>
+    </div>
+    
     <div class="list">
         <div class="list-item list-header">
             <span class="name">Prénom + Nom</span>
@@ -6,8 +12,8 @@
             <span class="perimeter">Périmètre</span>
         </div>
         <div class="list-item" *ngFor="let contact of contactList$ | async">
-            <span class="name">{{contact.firstNameContact + " " + contact.lastNameContact}}</span>
-            <span class="mail">{{contact.mailContact}}</span>
+            <span class="name">{{contact.firstName + " " + contact.lastName}}</span>
+            <span class="mail">{{contact.mail}}</span>
             <span class="perimeter"></span>
         </div>
     </div>
