--- a/front/organizer-front/src/app/contacts/contacts-list/contacts-list.component.scss
+++ b/front/organizer-front/src/app/contacts/contacts-list/contacts-list.component.scss
@@ -10,8 +10,9 @@ $base-color: #121535;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: center;
+    gap: 20px;
 }
 
 
@@ -37,6 +38,7 @@ $base-color: #121535;
 
 
 .list-item {
+    
     height: 60px;
     display: flex;
     flex-direction: row;
@@ -63,4 +65,30 @@ $base-color: #121535;
         width: 20%;
     }
     
+}
+
+.button-bar {
+    width: 70%;
+    margin-top: 20px;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+
+}
+
+.add-button {
+   
+    width: 40px;
+    height: 40px;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #45496d;
+    background: linear-gradient( #45496df2,  #45496df2) padding-box,
+    linear-gradient(45deg, rgba(127,0,255,1) 0%, rgba(218,0,255,1) 50%, rgba(0,254,255,1) 100%) border-box;
+    border: 1px solid transparent;
+    border-radius: 50%;
+    cursor: pointer;
+
 }
