--- a/front/organizer-front/src/styles.scss
+++ b/front/organizer-front/src/styles.scss
@@ -1,6 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+$base-color: #121535;
+
+
 body {
     margin: 0;
     padding: 0;
-    background-color: #121535;
+    background-color: $base-color;
 }
