--- a/front/organizer-front/src/app/header/header.component.html
+++ b/front/organizer-front/src/app/header/header.component.html
@@ -9,6 +9,10 @@
         <div class="selector-button" routerLink="files">
             <h2>Fichiers</h2>
         </div>
+        <div class="selector-button" routerLink="perimeters">
+            <h2>Périmètres</h2>
+        </div>
+
         <div class="search-bar">
 
         </div>
