--- a/front/organizer-front/src/styles.scss
+++ b/front/organizer-front/src/styles.scss
@@ -1,10 +1,11 @@
-/* You can add global styles to this file, and also import other style files */
-
-$base-color: #121535;
+  /* You can add global styles to this file, and also import other style files */
+@use  "reference" as ref;
 
 
 body {
     margin: 0;
     padding: 0;
-    background-color: $base-color;
+    background-color: ref.$base-color;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
