--- a/front/organizer-front/src/app/contacts/contacts-list/contacts-list.component.scss
+++ b/front/organizer-front/src/app/contacts/contacts-list/contacts-list.component.scss
@@ -1,11 +1,12 @@
-$base-color: #121535;
+@use  "reference" as ref;
+
 .content {
     margin: 0;
     padding: 0;
     top:0;
     width: 100%;
     height:calc(100vh - 65px);
-    background-color: $base-color;
+    background-color: ref.$base-color;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -39,10 +40,10 @@ $base-color: #121535;
     align-items: center;
     justify-content: flex-start;
 
-    background-color: #45496d;
+    background-color: ref.$background-color;
     font-family: Helvetica;
-    background: linear-gradient( #505050f2,  #45496df2) padding-box,
-        linear-gradient(45deg, rgba(127,0,255,1) 0%, rgba(218,0,255,1) 50%, rgba(0,254,255,1) 100%) border-box;
+    background: linear-gradient( #505050f2,  ref.$background-item-transparent) padding-box,
+        linear-gradient(45deg, ref.$gradient-border-0 0%, ref.$gradient-border-50 50%, ref.$gradient-border-100 100%) border-box;
     border: 1px solid transparent;
     border-radius: 10px;
 
@@ -67,7 +68,7 @@ $base-color: #121535;
     }
     hr {
         border: 1px solid transparent;
-        background: linear-gradient( #45496df2,  #45496df2) padding-box,
+        background: linear-gradient( ref.$background-item-transparent,  ref.$background-item-transparent) padding-box,
         linear-gradient(135deg, rgb(255, 255, 255) 0%, rgb(211, 211, 211) 50%, rgb(153, 153, 153) 100%) border-box;
         height: 60%;
     }
@@ -76,9 +77,9 @@ $base-color: #121535;
 .list-header {
     height: 60px;
     border: 2px solid transparent;
-    background-color: #45496d;
-    background: linear-gradient( #45496df2,  #45496df2) padding-box,
-    linear-gradient(45deg, rgba(127,0,255,1) 0%, rgba(218,0,255,1) 50%, rgba(0,254,255,1) 100%) border-box;
+    background-color: ref.$background-color;
+    background: linear-gradient( ref.$background-item-transparent,  ref.$background-item-transparent) padding-box,
+    linear-gradient(45deg, ref.$gradient-border-0 0%, ref.$gradient-border-50 50%, ref.$gradient-border-100 100%) border-box;
 
 }
 
@@ -100,15 +101,15 @@ $base-color: #121535;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient( #45496df2,  #45496df2) padding-box,
-    linear-gradient(45deg, rgba(127,0,255,1) 0%, rgba(218,0,255,1) 50%, rgba(0,254,255,1) 100%) border-box;
+    background: linear-gradient( ref.$background-item-transparent,  ref.$background-item-transparent) padding-box,
+    linear-gradient(45deg, ref.$gradient-border-0 0%, ref.$gradient-border-50 50%, ref.$gradient-border-100 100%) border-box;
     border: 1px solid transparent;
     border-radius: 50%;
     cursor: pointer;
 
     i {
         color: transparent;
-        background: linear-gradient(135deg, rgb(255, 255, 255) 0%, rgb(175, 175, 175) 50%, rgb(99, 99, 99) 100%);
+        background: linear-gradient(135deg, rgb(255, 255, 255) 0%, ref.$gradient-button-50 50%, ref.$gradient-button-100 100%);
         background-clip: text;
         -webkit-background-clip: text;
     }
@@ -130,8 +131,8 @@ $base-color: #121535;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient( #45496df2,  #45496df2) padding-box,
-    linear-gradient(135deg, rgb(255, 0, 0) 0%, rgb(255, 0, 140) 50%, rgba(127,0,255,1) 100%) border-box;
+    background: linear-gradient( ref.$background-item-transparent,  ref.$background-item-transparent) padding-box,
+    linear-gradient(135deg, ref.$gradient-trash-0 0%, ref.$gradient-trash-50 50%, ref.$gradient-border-0 100%) border-box;
     border: 1px solid transparent;
     border-radius: 50%;
     cursor: pointer;
@@ -143,8 +144,8 @@ $base-color: #121535;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient( #45496df2,  #45496df2) padding-box,
-    linear-gradient(135deg, rgb(255, 145, 0) 0%, rgb(255, 217, 0) 50%, rgba(127,0,255,1) 100%) border-box;
+    background: linear-gradient( ref.$background-item-transparent,  ref.$background-item-transparent) padding-box,
+    linear-gradient(135deg, ref.$gradient-edit-0 0%, ref.$gradient-edit-50 50%, ref.$gradient-border-0 100%) border-box;
     border: 1px solid transparent;
     border-radius: 50%;
     cursor: pointer;
