--- a/front/organizer-front/src/app/header/header.component.scss
+++ b/front/organizer-front/src/app/header/header.component.scss
@@ -1,15 +1,16 @@
+@use  "reference" as ref;
 
 #header {
-
 	text-align: center;
 	vertical-align: middle;
-	background: linear-gradient(#45496df2,  #45496df2) padding-box,
-        linear-gradient(45deg, rgba(127,0,255,1) 0%, rgba(218,0,255,1) 50%, rgba(0,254,255,1) 100%) border-box;
+	background: linear-gradient(ref.$background-item-transparent,  ref.$background-item-transparent) padding-box,
+        linear-gradient(45deg, ref.$gradient-border-0 0%, ref.$gradient-border-50 50%, ref.$gradient-border-100 100%) border-box;
 
 
     border-bottom: 5px solid;
     border-image-slice: 1;
-    border-image-source: linear-gradient(45deg, rgba(127,0,255,1) 0%, rgba(218,0,255,1) 50%, rgba(0,254,255,1) 100%);
+    border-image-source: linear-gradient(45deg, ref.$gradient-border-0 0%, ref.$gradient-border-50 50%, ref.$gradient-border-100 100%);
+
 
     color: white;
 	height: 60px;
@@ -22,16 +23,15 @@
     display: flex;   
     flex-wrap: nowrap; 
     justify-content: space-between;
-    align-items: center;
 
     .title{
         height: 100%;
         display: flex;
-        align-items: center; 
+        align-items: flex-end; 
         cursor: pointer;
         border-right: 5px solid;
         border-image-slice: 1;
-        border-image-source: linear-gradient(-45deg, #9400ff 0%, rgba(218,0,255,1) 50%, rgba(0,254,255,1) 100%);
+        border-image-source: linear-gradient(-45deg, ref.$gradient-border-0 0%, ref.$gradient-border-50 50%, ref.$gradient-border-100 100%);
     }
 
     h2 {
@@ -52,7 +52,10 @@
     }
 
      .selector-button{
-        height: 100%;  
+        height: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-end;  
      }
 
      .selector-button:hover{
@@ -67,14 +70,17 @@
         width: 45px;
         display: flex;
         justify-content: center;
-        align-items: center;
+        align-items: flex-end;
         margin-right: 20px;
+        
 
         i{
             color: rgb(255, 255, 255);
             font-size: 2rem;
         }
      }
+
+
 }
 
 
