--- a/front/organizer-front/src/app/header/header.component.html
+++ b/front/organizer-front/src/app/header/header.component.html
@@ -13,8 +13,10 @@
             <h2>Périmètres</h2>
         </div>
 
+        <div class="selector-button" routerLink="tags">
+            <h2>Tags</h2>
+        </div>
         <div class="search-bar">
-
         </div>
     </div>
     <div class ="parameter-button">
