--- a/front/organizer-front/src/app/files/files-list/files-list.component.html
+++ b/front/organizer-front/src/app/files/files-list/files-list.component.html
@@ -4,7 +4,7 @@
             {{node.content}}
         </mat-tree-node>
         <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild">
-            <div class="mat-tree-node">
+            <div class="mat-tree-node" [attr.aria-label]="'Toggle ' + node.content">
                 <div mat-icon-button matTreeNodeToggle
                         [attr.aria-label]="'Toggle ' + node.content">
                         <i class="fa-regular fa-folder" *ngIf="!treeControl.isExpanded(node)"></i>
