--- a/front/organizer-front/src/app/perimeters/perimeters-list/perimeters-list.component.html
+++ b/front/organizer-front/src/app/perimeters/perimeters-list/perimeters-list.component.html
@@ -1,5 +1,8 @@
 <div class="content">
     <div class="button-bar">
+        <div class="title-header">
+            <h2>Liste des Périmètres</h2>
+        </div>
         <div class="add-button right" (click)="toAddPerimeter()">
             <i class="fa-solid fa-plus"></i>
         </div>
