--- a/front/organizer-front/src/reference.scss
+++ b/front/organizer-front/src/reference.scss
@@ -30,3 +30,7 @@ $gradient-edit-0: rgb(255, 145, 0) ;
 $gradient-edit-50: rgb(255, 217, 0);
 $gradient-edit-100: rgba(127,0,255,1);
 
+
+$gradient-validate-0: rgb(62, 228, 98) ;
+$gradient-validate-50: rgb(0, 255, 157);
+$gradient-validate-100: rgba(127,0,255,1);
