--- a/front/organizer-front/src/reference.scss
+++ b/front/organizer-front/src/reference.scss
@@ -10,9 +10,11 @@ $background-card-transparent:#121535e1;
 
 $base-color-transparent : #12153580;
 
-$gradient-border-0: rgba(127,0,255,1);
-$gradient-border-50: rgba(218,0,255,1);
-$gradient-border-100: rgba(0,254,255,1);
+
+
+$gradient-border-0: #3b00ff;
+$gradient-border-50: #ab00ff;
+$gradient-border-100: #f400ff;
 
 // $gradient-border-0: rgb(117, 117, 164);
 // $gradient-border-50: rgb(255, 255, 255);
